--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,230 +1,147 @@
-.main {
+.homeSection {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
   justify-content: center;
-  align-items: center;
+  flex-direction: column;
   gap: 0.5rem;
 }
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.homeSection .imgContainer {
+  width: 300px;
+  height: 310px;
 }
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.homeSection .imgContainer .img {
+  width: 100%;
+  height: 100%;
 }
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+.homeSection .reviewsContainer {
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-top: 0.3rem;
 }
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+.homeSection .reviewsContainer span {
+  font-weight: 800;
+  font-size: 13px;
 }
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
-}
-
-.center {
+.homeSection .logoContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  padding: 4rem 0;
+  margin-top: 2.5rem;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.homeSection .logoContainer .logoimgContainer span {
+  font-size: 45px;
+  font-weight: 500;
+  align-self: flex-end;
+}
+.homeSection .storeImgs {
+  margin: 4rem auto 0.5rem;
+}
+.homeSection .appStoreimgContainer {
+  margin: 0.5rem auto;
+  width: 380px;
+  height: 110px;
+}
+.homeSection .appStoreimgContainer .img {
+  width: 100%;
+  height: 100%;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.homeSection .briefAboutapp {
+  line-height: 40px;
+  font-weight: 500;
+  font-size: 18px;
+  width: 775px;
+  margin: 2rem auto 0.5rem;
+  padding: 15px;
+}
+.homeSection .featurespara {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 0.2rem;
+  font-weight: 500;
+  font-size: 18px;
+  color: #0d0e10;
+  padding: 13px;
+  width: 775px;
 }
 
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.reviewsCardsSection {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.9rem;
+  margin-top: 6rem;
+}
+.reviewsCardsSection h2.title {
+  font-weight: 700;
+  font-size: 45px;
+  text-align: center;
+  color: #0d0e10;
+  margin-bottom: 1.5rem;
 }
 
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.animationContainer {
+  width: 80%;
+  overflow: hidden;
+  margin-top: 3rem;
+  margin-bottom: 19rem;
+  border-radius: 25px;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.animationContainer .marquee {
+  margin: 0.3rem auto;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
+@media (min-width: 992px) and (max-width: 1199.98px) {
+}
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .reviewsCardsSection h2.title {
+    font-weight: 700;
+    font-size: 29px;
     width: 100%;
   }
+}
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .homeSection .briefAboutapp,
+  .homeSection .featurespara {
+    font-size: 19px;
+    width: 98%;
+    line-height: 35px;
   }
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
+@media only screen and (max-width: 575.98px) {
+  .homeSection .appStoreimgContainer {
+    width: 99%;
+    height: 90px;
+  }
+  .homeSection .briefAboutapp,
+  .homeSection .featurespara {
+    font-size: 17px;
+    width: 98%;
+    line-height: 32px;
+  }
+  .homeSection .featurespara {
+    font-size: 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .reviewsCardsSection h2.title {
+    font-weight: 700;
+    font-size: 25px;
+    width: 100%;
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
+@media only screen and (max-width: 400px) {
+  .homeSection .appStoreimgContainer {
+    width: 95%;
+    height: 80px;
   }
 }
