--- a/src/app/components/Navbar/navbar.module.css
+++ b/src/app/components/Navbar/navbar.module.css
@@ -37,7 +37,7 @@
   transform: translateY(-2px);
 }
 
-.navContainer .links .link:hover::after {
+/* .navContainer .links .link:hover::after {
   content: "";
   position: absolute;
   left: 0;
@@ -46,7 +46,7 @@
   height: 2px;
   background-image: linear-gradient(90.02deg, #00e5d1 -27.56%, #2577f9 43.56%);
   z-index: -1;
-}
+} */
 
 .navContainer .links .menu {
   position: relative;
