--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,10 +24,12 @@ body {
   overflow-x: hidden;
 }
 body {
-  color: rgb(var(--background-start-rgb));
-  background: rgba(255, 255, 255, 0.4);
-  backdrop-filter: blur(80px);
-    height: 100vh;
+  color: rgb(var(--foreground-rgb));
+  background: url("../../public/background.jpg")
+  , rgba(255, 255, 255, 0.185);
+  background-size: cover;
+  backdrop-filter: blur(120px);
+  height: 100vh;
 }
 a {
   color: inherit;
@@ -37,4 +39,3 @@ a {
   display: flex;
   align-items: center;
 }
-
