--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -63,7 +63,6 @@
   gap: 0.2rem;
   font-weight: 500;
   font-size: 18px;
-  color: #0d0e10;
   padding: 13px;
   width: 775px;
 }
@@ -79,15 +78,15 @@
   font-weight: 700;
   font-size: 45px;
   text-align: center;
-  color: #0d0e10;
 }
 
 .animationContainer {
   width: 80%;
   overflow: hidden;
   margin-bottom: 19rem;
-  border-radius: 25px;
-  background: wheat;
+  border-radius: 35px;
+  padding: 30px 0;
+  background: rgba(255, 255, 255, 0.237);
 }
 
 .animationContainer .marquee {
