--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -86,7 +86,7 @@
   margin-bottom: 19rem;
   border-radius: 35px;
   padding: 30px 0;
-  background: rgba(255, 255, 255, 0.237);
+  background: #ffffff36;
 }
 
 .animationContainer .marquee {
