--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,7 @@ body {
   color: rgb(var(--foreground-rgb));
   background: url("../../public/background.jpg"), rgba(255, 255, 255, 0.185);
   background-size: cover;
+  backdrop-filter: blur(120px);
   height: 100vh;
 }
 a {
